Updated intro page; email and phone number
Intro page better reflects what I'm currently doing. Also put the updated email and phone number in footer. Closes #4.

--- a/research.html
+++ b/research.html
@@ -423,8 +423,7 @@ throughout eastern North America.</p>
 <ol style="list-style-type: decimal">
 <li><p>Development of a management prioritization tool for the
 Pennsylvania Game Commission, titled <a
-href="https://woodcock.shinyapps.io/W-PAST">W-PAST</a> (see our summary
-on the <a href="applications.html">applications page</a>).</p></li>
+href="https://woodcock.shinyapps.io/W-PAST">W-PAST</a>.</p></li>
 <li><p>Creation of a classification system which uses modified hidden
 Markov models to estimate migratory states from sparse GPS
 data.</p></li>
@@ -608,8 +607,8 @@ Forks Herald</a></p>
 
 <div style="text-align: center; padding: 20px; background-color: #333; color: white;">
         <p>&copy; <span id="year"></span> Liam Berigan. All Rights Reserved.</p>
-        <p>Contact: <a href="mailto:liamaberigan@gmail.com" style="color: #fff;">liamaberigan@gmail.com</a></p>
-        <p>Phone: <a href="tel:+17038888284" style="color: #fff;"> (703) 888-8284</a></p>
+        <p>Contact: <a href="mailto:lib0016@auburn.edu" style="color: #fff;"> lib0016@auburn.edu</a></p>
+        <p>Phone: <a href="tel:+17038888284" style="color: #fff;"> (334) 844-1044</a></p>
         <p>
             <a href="https://www.researchgate.net/profile/Liam-Berigan" target="_blank" style="color: #fff; margin: 0 10px;">ResearchGate</a> |
             <a href="https://github.com/LiamABerigan" target="_blank" style="color: #fff; margin: 0 10px;">GitHub</a> |
