--- a/footer_normal.html
+++ b/footer_normal.html
@@ -9,8 +9,8 @@
 
 <div style="text-align: center; padding: 20px; background-color: #333; color: white;">
         <p>&copy; <span id="year"></span> Liam Berigan. All Rights Reserved.</p>
-        <p>Contact: <a href="mailto:liamaberigan@gmail.com" style="color: #fff;">liamaberigan@gmail.com</a></p>
-        <p>Phone: <a href="tel:+17038888284" style="color: #fff;"> (703) 888-8284</a></p>
+        <p>Contact: <a href="mailto:lib0016@auburn.edu" style="color: #fff;"> lib0016@auburn.edu</a></p>
+        <p>Phone: <a href="tel:+17038888284" style="color: #fff;"> (334) 844-1044</a></p>
         <p>
             <a href="https://www.researchgate.net/profile/Liam-Berigan" target="_blank" style="color: #fff; margin: 0 10px;">ResearchGate</a> |
             <a href="https://github.com/LiamABerigan" target="_blank" style="color: #fff; margin: 0 10px;">GitHub</a> |
