Added consulting to teaching page
Closes #6

--- a/teaching.html
+++ b/teaching.html
@@ -353,17 +353,25 @@ div.tocify {
 
 
 <hr />
-<div id="teaching-at-auburn" class="section level2">
-<h2>Teaching at Auburn</h2>
 <p>I specialize in teaching quantitative methods and statistics from an
 ecological perspective, including topics such as regression, population
 dynamics, and Bayesian statistics. I expect to begin teaching an
 undergraduate course in natural resources statistics (WILD 5750) in
 Spring 2026, with additional courses to follow.</p>
 <hr />
+<div id="consulting" class="section level2">
+<h2>Consulting</h2>
+<p>I offer informal statistical and quantitative consulting for graduate
+students and undergraduates working on honors thesis projects. Common
+topics include regression, ANOVA, machine learning, parallel computing,
+Shiny app development, and introductory Bayesian methods — though I’m
+happy to help with other areas as well. If you have any questions, feel
+free to stop by my office (Forestry Building, Room 2349) or send me an
+email.</p>
+<hr />
 </div>
-<div id="past-courses" class="section level2">
-<h2>Past courses</h2>
+<div id="classes-taught" class="section level2">
+<h2>Classes taught</h2>
 <div
 style="background-color: #F6F6F6; border-radius: 10px; padding: 20px;">
 <p><strong>Instructor of Record</strong>:</p>
