--- a/research.html
+++ b/research.html
@@ -369,26 +369,24 @@ prairie-chicken displays on a lek in northwestern Kansas
 </center>
 </div>
 <div class="col-md-8 col-sm-12">
-<p>Population dynamics are often limited by the presence/absence of
-certain features on a landscape; the identification of those features
-can substantially aid in management for that species. During my postdoc
-at <a href="https://www.k-state.edu">K-State</a>, I have been attempting
-to identify limiting factors in lesser prairie-chicken occupancy and
-within-lek population dynamics. Our results indicate that U.S.
-Department of Agriculture Conservation Reserve Program Grasslands (CRP)
-have an outsized role in sustaining lesser prairie-chicken lek abundance
-throughout the Kansas portion of their range. Lesser prairie-chicken
-population trends are likely to be closely linked to future CRP
-enrollment, and particularly to program allocation/rental rate decisions
-made in the next Farm Bill.</p>
-<p>We currently have a draft manuscript based on the first portion of
-this analysis, which is under consideration at <em>Conservation
-Biology</em>. We are also working on two additional analyses using this
-dataset:</p>
+<p>Identifying features which limit the population growth of a species
+is a crucial aspect of wildlife management. During my postdoc at <a
+href="https://www.k-state.edu">K-State</a>, I focused on identifying
+limiting factors for lesser prairie-chicken occupancy and within-lek
+population dynamics. Our findings show that USDA Conservation Reserve
+Program Grasslands (CRP) play an outsized role in sustaining lesser
+prairie-chicken populations throughout the Kansas portion of the
+species’ range. Consequently, lesser prairie-chicken population trends
+are likely to be closely linked to future CRP enrollment, and
+particularly to program allocation and rental rate decisions made in the
+upcoming Farm Bill.</p>
+<p>We currently have a draft manuscript from the first part of this work
+under review at <em>Conservation Biology</em>. We also used this dataset
+to address two additional questions, with manuscripts forthcoming:</p>
 <ol style="list-style-type: decimal">
 <li><p>Developing novel methods for fitting density-dependence models
 with covariates in a Bayesian hierarchical framework.</p></li>
-<li><p>Examining habitat connectivity for lesser prairie-chickens at
+<li><p>Assessing habitat connectivity for lesser prairie-chickens at
 multiple spatial scales using clustering analyses.</p></li>
 </ol>
 </div>
