--- a/teaching.html
+++ b/teaching.html
@@ -370,8 +370,8 @@ free to stop by my office (Forestry Building, Room 2349) or send me an
 email.</p>
 <hr />
 </div>
-<div id="classes-taught" class="section level2">
-<h2>Classes taught</h2>
+<div id="past-courses" class="section level2">
+<h2>Past courses</h2>
 <div
 style="background-color: #F6F6F6; border-radius: 10px; padding: 20px;">
 <p><strong>Instructor of Record</strong>:</p>
