--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Liam A. Berigan</title>
 
-<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.30/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -287,7 +287,7 @@ $(document).ready(function () {
 href="https://www.auburn.edu">Auburn University</a>, where I study the
 movements, habitat use, and population dynamics of wildlife. I am
 particularly interested in the wintering ecology of birds, especially
-those reliant on grasslands or fire-dependent ecosystems. Some of my
+those reliant on grasslands or early-successional vegetation. Some of my
 past work includes <a
 href="files/Berigan_LPCDispersal_2024.pdf">monitoring lesser
 prairie-chicken translocations</a>, <a
@@ -296,8 +296,8 @@ conservation tools</a>, and <a
 href="files/Berigan_flight_altitudes_2025.pdf">modeling woodcock flight
 altitudes</a>.</p>
 <p>In addition to my research, I also provide statistical consulting
-within the College of Forestry, Wildlife, and Environment, and will
-teach WILD 5750 starting in Spring 2026.</p>
+within the College of Forestry, Wildlife, and Environment, and teach
+several courses on statistics and ecology.</p>
 <p>My CV is available <a href="files/Liam_Berigan_CV.pdf">here</a>, and
 I can be contacted via email
 <a href="mailto: lib0016@auburn.edu" target="_blank">here</a>.</p>
