--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@
 
 <title>Teaching</title>
 
-<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.30/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -355,9 +355,9 @@ div.tocify {
 <hr />
 <p>I specialize in teaching quantitative methods and statistics from an
 ecological perspective, including topics such as regression, population
-dynamics, and Bayesian statistics. I expect to begin teaching an
-undergraduate course in natural resources statistics (WILD 5750) in
-Spring 2026, with additional courses to follow.</p>
+dynamics, and Bayesian statistics. I expect to teach Spatial Ecology
+(WILD 7870) in Spring 2026, and Advanced Analysis for Ecological
+Sciences (WILD 7150) in Fall 2026.</p>
 <hr />
 <div id="consulting" class="section level2">
 <h2>Consulting</h2>
