--- a/teaching.html
+++ b/teaching.html
@@ -359,6 +359,20 @@ dynamics, and Bayesian statistics. I expect to teach Spatial Ecology
 (WILD 7870) in Spring 2026, and Advanced Analysis for Ecological
 Sciences (WILD 7150) in Fall 2026.</p>
 <hr />
+<div id="spatial-ecology" class="section level2">
+<h2>Spatial Ecology</h2>
+<p><strong>Course number</strong>: <a
+href="https://bulletin.auburn.edu/coursesofinstruction/wild/">WILD
+7870</a>.</p>
+<p><strong>Next taught</strong>: Spring 2026</p>
+<p>This graduate course provides a broad overview of the tools and
+techniques used to interpret spatial processes in ecology, ranging from
+point pattern analysis to conservation reserve design. For the final
+project, students conduct an independent spatial analysis on a topic
+related to their thesis or dissertation and prepare a manuscript based
+on their results. The course syllabus is available <a
+href="files/syllabus_WILD7870.html">here</a>.</p>
+</div>
 <div id="consulting" class="section level2">
 <h2>Consulting</h2>
 <p>I offer informal statistical and quantitative consulting for graduate
