Updated WILD 7870 syllabus

--- a/files/syllabus_WILD7870.html
+++ b/files/syllabus_WILD7870.html
@@ -373,7 +373,7 @@ color: #4a4a4a;
 color: #4a4a4a;
 }
 </style>
-<p><em>Last update to syllabus: 11/04/2025</em></p>
+<p><em>Last update to syllabus: 01/08/2026</em></p>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
 <p><strong>Course number</strong>: WILD 7870</p>
@@ -619,17 +619,7 @@ materials.</p>
 <li>Introduction to programming in R</li>
 <li>Course overview &amp; expectations</li>
 </ul></li>
-<li>Week 2: Introduction to spatial ecology (Jan 13–15)
-<ul>
-<li>R as a GIS<br />
-</li>
-<li>Definition and importance of spatial ecology<br />
-</li>
-<li>Historical perspective<br />
-</li>
-<li>Discussion of Wickham (2014)</li>
-</ul></li>
-<li>Week 3: Geographic information systems (GIS) in ecology (Jan 20–22)
+<li>Week 2: Geographic information systems (GIS) in ecology (Jan 13–15)
 <ul>
 <li>Basics of GIS<br />
 </li>
@@ -640,7 +630,7 @@ materials.</p>
 <li>Discussion of Geospatial Revolution<br />
 </li>
 </ul></li>
-<li>Week 4: Scale (Jan 27–29)
+<li>Week 3: Scale (Jan 20–22)
 <ul>
 <li>Scales and hierarchies in ecology<br />
 </li>
@@ -649,26 +639,26 @@ materials.</p>
 <li>Discussion of Jackson &amp; Fahrig (2015)<br />
 </li>
 </ul></li>
-<li>Week 5: Measuring landcover (Feb 3–5)
+<li>Week 4: Measuring landcover (Jan 27–29)
 <ul>
 <li>Conceptual models for visualizing landcover</li>
 <li>Measuring composition and configuration</li>
 <li>Discussion of Betts et al. (2014)</li>
 </ul></li>
-<li>Week 6: Remote sensing and point patterns (Feb 10–12)
+<li>Week 5: Remote sensing and point patterns (Feb 3–5)
 <ul>
 <li>Remote sensing tools and technologies</li>
 <li>Point pattern analysis</li>
 <li>Discussion of Legendre (1993)</li>
 </ul></li>
-<li>Week 7: Spatial autocorrelation (Feb 17–19)
+<li>Week 6: Spatial autocorrelation (Feb 10–12)
 <ul>
 <li>Introduction to spatial autocorrelation</li>
 <li>Moran’s I and Geary’s C</li>
 <li>Variograms and correlograms</li>
 <li>Discussion of Zuckerberg et al. (2020)</li>
 </ul></li>
-<li>Week 8: Spatial dependence in ecological data (Feb 24–26)
+<li>Week 7: Spatial dependence in ecological data (Feb 17–19)
 <ul>
 <li>Trend surface analysis</li>
 <li>Autocovariate models</li>
@@ -676,63 +666,61 @@ materials.</p>
 <li>Multilevel models</li>
 <li>Introduction to Google Earth Engine, Tamiminia et al. (2020)</li>
 </ul></li>
-<li>Week 9: Species distribution modeling (Mar 3–5)
+<li>Week 8: Species distribution modeling (Feb 24–26)
 <ul>
 <li>Niche concepts</li>
 <li>Distributions vs. Niches</li>
 <li>Modeling techniques (GLMs, GAMs, envelope models, regression trees
 and forests, maximum entropy)</li>
-<li>Model evaluation</li>
 <li>Discuss Guisan &amp; Thuiller (2005)</li>
+</ul></li>
+</ul>
+<p><strong>Project proposal due (Feb 27)</strong></p>
+<ul>
+<li>Week 9: SDM validation and resource selection (Mar 3–5)
+<ul>
+<li>K-fold partitioning</li>
+<li>Model evaluation</li>
+<li>Discussion of Fretwell and Lucas (1969)</li>
 </ul></li>
 </ul>
 <p><em>Spring break (March 9–13)</em></p>
 <ul>
-<li>Week 10: Habitat selection theory (Mar 17–19)
+<li>Week 10: Space use and resource selection (Mar 17–19)
 <ul>
-<li>Ideal free and despotic distributions</li>
-<li>Home range and space use</li>
-<li>Discussion of Fretwell and Lucas (1969)</li>
-</ul></li>
-<li>Week 11: Movement theory and models (Mar 24–26)
-<ul>
-<li>Concepts in dispersal and migration and movement theory</li>
-<li>Movement models and analysis</li>
+<li>Ideal free and ideal despotic distributions</li>
+<li>Home Ranges</li>
+<li>Quantifying resource selection</li>
 <li>Discuss Nathan et al. (2008)</li>
+</ul></li>
+<li>Week 11: Resource selection and movement (Mar 24–26)
+<ul>
+<li>Resource selection functions</li>
+<li>Step selection functions</li>
+<li>Discuss Fortin et al. (2005)</li>
 </ul></li>
 <li>Week 12: Connectivity (Mar 31–Apr 2)
 <ul>
 <li>Structural vs. functional</li>
 <li>Limitations to connectivity</li>
 <li>Methods for assessing connectivity</li>
-<li>Discuss Fortin et al. (2005)</li>
+<li>Discuss Kimberly et al. (2021)</li>
 </ul></li>
-<li>Week 13: Spatially structured populations (Mar 31–Apr 2)
+<li>Week 13: Spatially structured populations (Apr 7–Apr 9)
 <ul>
 <li>Metapopulation theory</li>
 <li>Source-sink dynamics</li>
 <li>Population viability analysis</li>
-<li>Discuss Kimberly et al. (2021)</li>
+<li>Discuss Baguette (2004)</li>
 </ul></li>
-<li>Week 14: Spatially structured communities (Apr 7–Apr 9)
-<ul>
-<li>Alpha, beta, and gamma diversity</li>
-<li>Species-area relationships</li>
-<li>Island biogeography theory</li>
-<li>Metacommunities</li>
-<li>Discuss Anderson et al. (2023)</li>
-</ul></li>
-<li>Week 15: Reserve design (Apr 14–Apr 16)
-<ul>
-<li>Principles and tools for conservation planning</li>
-<li>Half-earth</li>
-<li>Land-sparing vs. land-sharing</li>
-</ul></li>
-<li>Week 16: Student presentations and course review (Apr 21–Apr 23)
+<li>Week 14: Work week (Apr 14–Apr 16)<br />
+</li>
+<li>Week 15: Student presentations and course review (Apr 21–Apr 23)
 <ul>
 <li>Students present course projects</li>
 </ul></li>
 </ul>
+<p><strong>Final project due (Apr 24)</strong></p>
 </div>
 <div id="generative-artificial-intelligence-tools" class="section level1">
 <h1>Generative Artificial Intelligence Tools</h1>
